# mad

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_server.py
mad/: __init__.py  api.py
mad/analysis/: __init__.py  comparative.py
mad/correlation/: __init__.py  engine.py
mad/models/: __init__.py  comparison.py  entities.py  events.py
mad/transformers/: __init__.py  agent_transcript.py  base.py  config.py  cursor_log.py  mcps_folder.py  network.py  server_inference.py  server_log.py  vscdb.py
samples/: agent-transcript-sample.json
web/: index.html
web/css/: style.css
web/js/: app.js  comparison.js  timeline.js
